# train_yolo

./: .gitignore  CMakeLists.txt  YoloTrain.hpp  YoloTrain.pro  YoloTrainGlobal.hpp  YoloTrainProcess.cpp  YoloTrainProcess.h  YoloTrainWidget.cpp  YoloTrainWidget.h  train_yolo.pro
data/config/: template-enet-coco.cfg  template-yolov3-tiny-prn.cfg  template-yolov3.cfg  template-yolov4-tiny.cfg  template-yolov4.cfg
data/models/pretrained/: download_models.txt
